--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crx-dofollow-links",
-  "description": "Highlight dofollow links on any page",
+  "description": "Highlight dofollow links as you browse the web.",
   "private": true,
   "version": "1.0.0",
   "type": "module",
